// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bins actual cycles by day: cycles binned by day and part 1`] = `
Map {
  "DayAndPart {
  \\"day\\": 2018-03-04T06:00:00.000Z,
  \\"part\\": \\"partr-4\\",
}" => 1,
  "DayAndPart {
  \\"day\\": 2018-03-05T06:00:00.000Z,
  \\"part\\": \\"parti-3\\",
}" => 1,
  "DayAndPart {
  \\"day\\": 2018-03-04T06:00:00.000Z,
  \\"part\\": \\"partl-1\\",
}" => 1,
}
`;

exports[`bins actual cycles by day: cycles binned by day and station 1`] = `
Map {
  "DayAndStation {
  \\"day\\": 2018-03-05T06:00:00.000Z,
  \\"station\\": \\"L/U #2\\",
}" => 0.00005,
  "DayAndStation {
  \\"day\\": 2018-03-04T06:00:00.000Z,
  \\"station\\": \\"L/U #2\\",
}" => 0.0001,
  "DayAndStation {
  \\"day\\": 2018-03-05T06:00:00.000Z,
  \\"station\\": \\"L/U #1\\",
}" => 0.0001,
  "DayAndStation {
  \\"day\\": 2018-03-04T06:00:00.000Z,
  \\"station\\": \\"L/U #1\\",
}" => 0.0002,
  "DayAndStation {
  \\"day\\": 2018-03-05T06:00:00.000Z,
  \\"station\\": \\"MC #1\\",
}" => 0.0005,
  "DayAndStation {
  \\"day\\": 2018-03-04T06:00:00.000Z,
  \\"station\\": \\"MC #1\\",
}" => 0.0005833333333333333,
}
`;

exports[`computes station oee: station minutes for last week 1`] = `
Map {
  "MC #1" => 50,
  "L/U #1" => 12,
  "L/U #2" => 6,
}
`;

exports[`creates cycles clipboard table: cycle clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Active Min
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 am
        </td>
        <td>
          partw-0
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pal8
        </td>
        <td>
          serialm
        </td>
        <td>
          worki
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:23 am
        </td>
        <td>
          partw-0
        </td>
        <td>
          MC #1
        </td>
        <td>
          pal8
        </td>
        <td>
          serialm
        </td>
        <td>
          worki
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 am
        </td>
        <td>
          partw-0
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pal8
        </td>
        <td>
          serialm
        </td>
        <td>
          worki
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:05 pm
        </td>
        <td>
          parte-4
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pal9
        </td>
        <td>
          serial6
        </td>
        <td>
          worki
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:28 pm
        </td>
        <td>
          parte-4
        </td>
        <td>
          MC #1
        </td>
        <td>
          pal9
        </td>
        <td>
          serial6
        </td>
        <td>
          worki
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:38 pm
        </td>
        <td>
          parte-4
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pal9
        </td>
        <td>
          serial6
        </td>
        <td>
          worki
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 0:05 am
        </td>
        <td>
          partp-1
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palj
        </td>
        <td>
          serialc
        </td>
        <td>
          workh
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 0:38 am
        </td>
        <td>
          partp-1
        </td>
        <td>
          MC #1
        </td>
        <td>
          palj
        </td>
        <td>
          serialc
        </td>
        <td>
          workh
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 0:48 am
        </td>
        <td>
          partp-1
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palj
        </td>
        <td>
          serialc
        </td>
        <td>
          workh
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates cycles clipboard table: cycle filtered clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Active Min
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 21:05 pm
        </td>
        <td>
          parte-4
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pal9
        </td>
        <td>
          serial6
        </td>
        <td>
          worki
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:28 pm
        </td>
        <td>
          parte-4
        </td>
        <td>
          MC #1
        </td>
        <td>
          pal9
        </td>
        <td>
          serial6
        </td>
        <td>
          worki
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:38 pm
        </td>
        <td>
          parte-4
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pal9
        </td>
        <td>
          serial6
        </td>
        <td>
          worki
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates log entries clipboard table: events clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Result
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Active Min
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 5, 2018, 0:05 am
        </td>
        <td>
          partd-1
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palm
        </td>
        <td>
          serial6
        </td>
        <td>
          work6
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 0:38 am
        </td>
        <td>
          partd-1
        </td>
        <td>
          MC #1
        </td>
        <td>
          palm
        </td>
        <td>
          serial6
        </td>
        <td>
          work6
        </td>
        <td>
          progh
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 0:48 am
        </td>
        <td>
          partd-1
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palm
        </td>
        <td>
          serial6
        </td>
        <td>
          work6
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 0:53 am
        </td>
        <td>
          partd-1
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serial6
        </td>
        <td>
          work6
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 1:00 am
        </td>
        <td>
          partd-1
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          serial6
        </td>
        <td>
          work6
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:05 pm
        </td>
        <td>
          part3-0
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pal3
        </td>
        <td>
          serialr
        </td>
        <td>
          work5
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:28 pm
        </td>
        <td>
          part3-0
        </td>
        <td>
          MC #1
        </td>
        <td>
          pal3
        </td>
        <td>
          serialr
        </td>
        <td>
          work5
        </td>
        <td>
          progz
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:38 pm
        </td>
        <td>
          part3-0
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pal3
        </td>
        <td>
          serialr
        </td>
        <td>
          work5
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:43 pm
        </td>
        <td>
          part3-0
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serialr
        </td>
        <td>
          work5
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 21:50 pm
        </td>
        <td>
          part3-0
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          serialr
        </td>
        <td>
          work5
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 am
        </td>
        <td>
          parts-0
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palm
        </td>
        <td>
          seriale
        </td>
        <td>
          workv
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:23 am
        </td>
        <td>
          parts-0
        </td>
        <td>
          MC #1
        </td>
        <td>
          palm
        </td>
        <td>
          seriale
        </td>
        <td>
          workv
        </td>
        <td>
          progr
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 am
        </td>
        <td>
          parts-0
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palm
        </td>
        <td>
          seriale
        </td>
        <td>
          workv
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 am
        </td>
        <td>
          parts-0
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          seriale
        </td>
        <td>
          workv
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 am
        </td>
        <td>
          parts-0
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          seriale
        </td>
        <td>
          workv
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:45 am
        </td>
        <td>
          parts-0
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          seriale
        </td>
        <td>
          workv
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates points clipboard table: clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Station
        </th>
        <th>
          Sun Mar 04 2018
        </th>
        <th>
          Mon Mar 05 2018
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <th>
          L/U #1
        </th>
        <td>
          0.0002
        </td>
        <td>
          0.0001
        </td>
      </tr>
      

      <tr>
        <th>
          L/U #2
        </th>
        <td>
          0.0001
        </td>
        <td>
          0.00005
        </td>
      </tr>
      

      <tr>
        <th>
          MC #1
        </th>
        <td>
          0.0005833333333333333
        </td>
        <td>
          0.0005
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`loads a specific month for analysis: selected month with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Map {
      "palss" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:10.000Z,
          "y": 44,
        },
      ],
      "paltt" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:10.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
      ],
    },
    "estimatedCycleTimes": Map {
      "partAAA-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
      "partBBB-2" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "partCCC-3" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
    },
    "pallet_names": Array [
      "palss",
      "paltt",
    ],
    "part_and_proc_names": Array [
      "partAAA-1",
      "partBBB-2",
      "partCCC-3",
    ],
    "part_cycles": Array [
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 13842,
        "operator": "",
        "pallet": "paltt",
        "part": "partCCC",
        "process": 3,
        "serial": "serialo",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "work2",
        "x": 2018-01-06T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 18,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 13842,
        "operator": "",
        "pallet": "paltt",
        "part": "partCCC",
        "process": 3,
        "serial": "serialo",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "work2",
        "x": 2018-01-06T09:30:05.000Z,
        "y": 18,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 13842,
        "operator": "",
        "pallet": "paltt",
        "part": "partCCC",
        "process": 3,
        "serial": "serialo",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "work2",
        "x": 2018-01-06T09:40:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 4419,
        "operator": "",
        "pallet": "paltt",
        "part": "partBBB",
        "process": 2,
        "serial": "seriald",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "work0",
        "x": 2018-01-31T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 24,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 4419,
        "operator": "",
        "pallet": "paltt",
        "part": "partBBB",
        "process": 2,
        "serial": "seriald",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "work0",
        "x": 2018-01-31T09:36:05.000Z,
        "y": 24,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 4419,
        "operator": "",
        "pallet": "paltt",
        "part": "partBBB",
        "process": 2,
        "serial": "seriald",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "work0",
        "x": 2018-01-31T09:46:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 87097,
        "operator": "",
        "pallet": "palss",
        "part": "partAAA",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "workx",
        "x": 2018-02-02T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 30,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 87097,
        "operator": "",
        "pallet": "palss",
        "part": "partAAA",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "workx",
        "x": 2018-02-02T09:42:05.000Z,
        "y": 30,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 87097,
        "operator": "",
        "pallet": "palss",
        "part": "partAAA",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "workx",
        "x": 2018-02-02T09:52:05.000Z,
        "y": 3,
      },
    ],
    "station_groups": Array [
      "L/U",
      "MC",
    ],
    "station_names": Array [
      "L/U #1",
      "L/U #2",
      "MC #1",
    ],
  },
  "inspection": Object {
    "by_part": Map {
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"partAAA\\",
    }" => Array [
        Object {
          "materialID": 87097,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 87097,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 87097,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:10.000Z,
        },
        Object {
          "materialID": 87097,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:10.000Z,
        },
      ],
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"partBBB\\",
    }" => Array [
        Object {
          "materialID": 4419,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 4419,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 4419,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"partCCC\\",
    }" => Array [
        Object {
          "materialID": 13842,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 13842,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 13842,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:10.000Z,
        },
        Object {
          "materialID": 13842,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-06T09:52:10.000Z,
        },
      ],
    },
  },
  "sim_use": Object {
    "production": Array [],
    "station_use": Array [],
  },
}
`;

exports[`processes new log events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Map {
      "palaa" => Array [],
      "palbb" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:10.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:10.000Z,
          "y": 44,
        },
      ],
      "palcc" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:39:05.000Z,
          "y": 44,
        },
      ],
    },
    "estimatedCycleTimes": Map {
      "part111-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
      "part222-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part222-2" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
    },
    "pallet_names": Array [
      "palaa",
      "palbb",
      "palcc",
    ],
    "part_and_proc_names": Array [
      "part111-1",
      "part222-1",
      "part222-2",
    ],
    "part_cycles": Array [
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 15510,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialv",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "workh",
        "x": 2018-01-31T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 24,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 15510,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialv",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "workh",
        "x": 2018-01-31T09:36:05.000Z,
        "y": 24,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 15510,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialv",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "workh",
        "x": 2018-01-31T09:46:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 70329,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "seriala",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "work7",
        "x": 2018-02-02T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 30,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 70329,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "seriala",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "work7",
        "x": 2018-02-02T09:42:05.000Z,
        "y": 30,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 70329,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "seriala",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "work7",
        "x": 2018-02-02T09:52:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 90793,
        "operator": "",
        "pallet": "palcc",
        "part": "part111",
        "process": 1,
        "serial": "serial8",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "worko",
        "x": 2018-02-08T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 12,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 90793,
        "operator": "",
        "pallet": "palcc",
        "part": "part111",
        "process": 1,
        "serial": "serial8",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "worko",
        "x": 2018-02-08T09:24:05.000Z,
        "y": 12,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 90793,
        "operator": "",
        "pallet": "palcc",
        "part": "part111",
        "process": 1,
        "serial": "serial8",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "worko",
        "x": 2018-02-08T09:34:05.000Z,
        "y": 3,
      },
    ],
    "station_groups": Array [
      "L/U",
      "MC",
    ],
    "station_names": Array [
      "L/U #1",
      "L/U #2",
      "MC #1",
    ],
  },
  "inspection": Object {
    "by_part": Map {
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part222\\",
    }" => Array [
        Object {
          "materialID": 15510,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 15510,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 15510,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:10.000Z,
        },
        Object {
          "materialID": 15510,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:10.000Z,
        },
      ],
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part111\\",
    }" => Array [
        Object {
          "materialID": 70329,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 70329,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:10.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:10.000Z,
        },
        Object {
          "materialID": 90793,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 90793,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-08T09:39:05.000Z,
        },
        Object {
          "materialID": 90793,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-08T09:46:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Array [
      "Insp1",
    ],
    "matsById": Map {
      "90793" => Object {
        "completedInspections": Object {
          "Insp1": 2018-02-08T09:46:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqk",
        "last_event": 2018-02-08T09:46:05.000Z,
        "materialID": 90793,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      "70329" => Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:10.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqi",
        "last_event": 2018-02-02T10:04:10.000Z,
        "materialID": 70329,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:00:00",
      "counter": 8,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:10.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "palcc",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 2,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 3,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:24:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "palcc",
      "program": "progw",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:31:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "palcc",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "details": Object {
        "ActualPath": "[{\\"MaterialID\\":90793,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
        "InspectionType": "Insp1",
      },
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "",
      "program": "theprogramshouldbeignored",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 7,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palcc",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:46:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceu",
          "id": 90793,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serial8",
          "uniq": "uniqk",
          "workorder": "worko",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "sim_use": Object {
    "production": Array [],
    "station_use": Array [],
  },
}
`;

exports[`processes new log events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Map {
      "palaa" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:05.000Z,
          "y": 44,
        },
      ],
      "palbb" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:10.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:10.000Z,
          "y": 44,
        },
      ],
    },
    "estimatedCycleTimes": Map {
      "part111-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
      "part222-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part222-2" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
    },
    "pallet_names": Array [
      "palaa",
      "palbb",
    ],
    "part_and_proc_names": Array [
      "part111-1",
      "part222-1",
      "part222-2",
    ],
    "part_cycles": Array [
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 90079,
        "operator": "",
        "pallet": "palaa",
        "part": "part222",
        "process": 2,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "work7",
        "x": 2018-01-06T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 18,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 90079,
        "operator": "",
        "pallet": "palaa",
        "part": "part222",
        "process": 2,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "work7",
        "x": 2018-01-06T09:30:05.000Z,
        "y": 18,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 90079,
        "operator": "",
        "pallet": "palaa",
        "part": "part222",
        "process": 2,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "work7",
        "x": 2018-01-06T09:40:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 15510,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialv",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "workh",
        "x": 2018-01-31T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 24,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 15510,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialv",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "workh",
        "x": 2018-01-31T09:36:05.000Z,
        "y": 24,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 15510,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialv",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "workh",
        "x": 2018-01-31T09:46:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 70329,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "seriala",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "work7",
        "x": 2018-02-02T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 30,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 70329,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "seriala",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "work7",
        "x": 2018-02-02T09:42:05.000Z,
        "y": 30,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 70329,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "seriala",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "work7",
        "x": 2018-02-02T09:52:05.000Z,
        "y": 3,
      },
    ],
    "station_groups": Array [
      "L/U",
      "MC",
    ],
    "station_names": Array [
      "L/U #1",
      "L/U #2",
      "MC #1",
    ],
  },
  "inspection": Object {
    "by_part": Map {
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part222\\",
    }" => Array [
        Object {
          "materialID": 90079,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 90079,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 90079,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-06T09:52:05.000Z,
        },
        Object {
          "materialID": 15510,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 15510,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 15510,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:10.000Z,
        },
        Object {
          "materialID": 15510,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:10.000Z,
        },
      ],
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part111\\",
    }" => Array [
        Object {
          "materialID": 70329,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 70329,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:10.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:10.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Array [
      "Insp1",
    ],
    "matsById": Map {
      "15510" => Object {
        "completedInspections": Object {
          "Insp1": 2018-01-31T09:58:10.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "completed_time": 2018-01-31T09:46:05.000Z,
        "jobUnique": "uniqv",
        "last_event": 2018-01-31T09:58:10.000Z,
        "materialID": 15510,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
          "Insp1",
        ],
      },
      "70329" => Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:10.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqi",
        "last_event": 2018-02-02T10:04:10.000Z,
        "materialID": 70329,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
          "Insp1",
        ],
      },
      "90079" => Object {
        "completedInspections": Object {
          "Insp1": 2018-01-06T09:52:05.000Z,
        },
        "completed_procs": Array [
          2,
        ],
        "completed_time": 2018-01-06T09:40:05.000Z,
        "jobUnique": "uniqt",
        "last_event": 2018-01-06T09:52:05.000Z,
        "materialID": 90079,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "palbb",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 2,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 3,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:42:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "palbb",
      "program": "progz",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T09:57:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "True",
      "startofcycle": false,
      "type": "InspectionForce",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "details": Object {
        "ActualPath": "[{\\"MaterialID\\":70329,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
        "InspectionType": "Insp1",
      },
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T09:57:10.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "",
      "program": "theprogramshouldbeignored",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 8,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:57:10.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 8,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:10.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "serial": "seriala",
          "uniq": "uniqi",
          "workorder": "work7",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "sim_use": Object {
    "production": Array [],
    "station_use": Array [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Map {
      "palaa" => Array [],
      "palbb" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:10.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:10.000Z,
          "y": 44,
        },
      ],
      "palcc" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:39:05.000Z,
          "y": 44,
        },
      ],
    },
    "estimatedCycleTimes": Map {
      "part111-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
      "part222-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part222-2" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
    },
    "pallet_names": Array [
      "palaa",
      "palbb",
      "palcc",
    ],
    "part_and_proc_names": Array [
      "part111-1",
      "part222-1",
      "part222-2",
    ],
    "part_cycles": Array [
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 47261,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "workn",
        "x": 2018-01-31T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 24,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 47261,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "workn",
        "x": 2018-01-31T09:36:05.000Z,
        "y": 24,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 47261,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "workn",
        "x": 2018-01-31T09:46:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 11231,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "serialr",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "works",
        "x": 2018-02-02T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 30,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 11231,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "serialr",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "works",
        "x": 2018-02-02T09:42:05.000Z,
        "y": 30,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 11231,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "serialr",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "works",
        "x": 2018-02-02T09:52:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 88570,
        "operator": "",
        "pallet": "palcc",
        "part": "part111",
        "process": 1,
        "serial": "serialk",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "work6",
        "x": 2018-02-08T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 12,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 88570,
        "operator": "",
        "pallet": "palcc",
        "part": "part111",
        "process": 1,
        "serial": "serialk",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "work6",
        "x": 2018-02-08T09:24:05.000Z,
        "y": 12,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 88570,
        "operator": "",
        "pallet": "palcc",
        "part": "part111",
        "process": 1,
        "serial": "serialk",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "work6",
        "x": 2018-02-08T09:34:05.000Z,
        "y": 3,
      },
    ],
    "station_groups": Array [
      "L/U",
      "MC",
    ],
    "station_names": Array [
      "L/U #1",
      "L/U #2",
      "MC #1",
    ],
  },
  "inspection": Object {
    "by_part": Map {
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part222\\",
    }" => Array [
        Object {
          "materialID": 47261,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 47261,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 47261,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:10.000Z,
        },
        Object {
          "materialID": 47261,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:10.000Z,
        },
      ],
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part111\\",
    }" => Array [
        Object {
          "materialID": 11231,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 11231,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 11231,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:10.000Z,
        },
        Object {
          "materialID": 11231,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:10.000Z,
        },
        Object {
          "materialID": 88570,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 88570,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-08T09:39:05.000Z,
        },
        Object {
          "materialID": 88570,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-08T09:46:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Array [
      "Insp1",
    ],
    "matsById": Map {
      "88570" => Object {
        "completedInspections": Object {
          "Insp1": 2018-02-08T09:46:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqg",
        "last_event": 2018-02-08T09:46:05.000Z,
        "materialID": 88570,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      "11231" => Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:10.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqk",
        "last_event": 2018-02-02T10:04:10.000Z,
        "materialID": 11231,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:00:00",
      "counter": 8,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:10.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "palcc",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 2,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 3,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:24:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "palcc",
      "program": "prog5",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:31:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "palcc",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "details": Object {
        "ActualPath": "[{\\"MaterialID\\":88570,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
        "InspectionType": "Insp1",
      },
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "",
      "program": "theprogramshouldbeignored",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 7,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palcc",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:46:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "faceq",
          "id": 88570,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "serial": "serialk",
          "uniq": "uniqg",
          "workorder": "work6",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "sim_use": Object {
    "production": Array [],
    "station_use": Array [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Map {
      "palaa" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:05.000Z,
          "y": 44,
        },
      ],
      "palbb" => Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:10.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:10.000Z,
          "y": 44,
        },
      ],
    },
    "estimatedCycleTimes": Map {
      "part111-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
      "part222-1" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part222-2" => Map {
        "MC" => Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
    },
    "pallet_names": Array [
      "palaa",
      "palbb",
    ],
    "part_and_proc_names": Array [
      "part111-1",
      "part222-1",
      "part222-2",
    ],
    "part_cycles": Array [
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 68845,
        "operator": "",
        "pallet": "palaa",
        "part": "part222",
        "process": 2,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "workf",
        "x": 2018-01-06T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 18,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 68845,
        "operator": "",
        "pallet": "palaa",
        "part": "part222",
        "process": 2,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "workf",
        "x": 2018-01-06T09:30:05.000Z,
        "y": 18,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 68845,
        "operator": "",
        "pallet": "palaa",
        "part": "part222",
        "process": 2,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "workf",
        "x": 2018-01-06T09:40:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 47261,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "workn",
        "x": 2018-01-31T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 24,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 47261,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "workn",
        "x": 2018-01-31T09:36:05.000Z,
        "y": 24,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 47261,
        "operator": "",
        "pallet": "palbb",
        "part": "part222",
        "process": 1,
        "serial": "serialm",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "workn",
        "x": 2018-01-31T09:46:05.000Z,
        "y": 3,
      },
      Object {
        "active": 6,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 11231,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "serialr",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 1,
        "workorder": "works",
        "x": 2018-02-02T09:09:05.000Z,
        "y": 6,
      },
      Object {
        "active": 30,
        "completed": false,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": false,
        "matId": 11231,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "serialr",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "MC",
        "stationNumber": 1,
        "workorder": "works",
        "x": 2018-02-02T09:42:05.000Z,
        "y": 30,
      },
      Object {
        "active": 3,
        "completed": true,
        "completedInspections": Map {
          "Insp1" => true,
        },
        "isLabor": true,
        "matId": 11231,
        "operator": "",
        "pallet": "palbb",
        "part": "part111",
        "process": 1,
        "serial": "serialr",
        "signaledInspections": Array [
          "Insp1",
        ],
        "stationGroup": "L/U",
        "stationNumber": 2,
        "workorder": "works",
        "x": 2018-02-02T09:52:05.000Z,
        "y": 3,
      },
    ],
    "station_groups": Array [
      "L/U",
      "MC",
    ],
    "station_names": Array [
      "L/U #1",
      "L/U #2",
      "MC #1",
    ],
  },
  "inspection": Object {
    "by_part": Map {
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part222\\",
    }" => Array [
        Object {
          "materialID": 68845,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 68845,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 68845,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-06T09:52:05.000Z,
        },
        Object {
          "materialID": 47261,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 47261,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 47261,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:10.000Z,
        },
        Object {
          "materialID": 47261,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:10.000Z,
        },
      ],
      "PartAndInspType {
      \\"inspType\\": \\"Insp1\\",
      \\"part\\": \\"part111\\",
    }" => Array [
        Object {
          "materialID": 11231,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 11231,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 11231,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:10.000Z,
        },
        Object {
          "materialID": 11231,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:10.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Array [
      "Insp1",
    ],
    "matsById": Map {
      "68845" => Object {
        "completedInspections": Object {
          "Insp1": 2018-01-06T09:52:05.000Z,
        },
        "completed_procs": Array [
          2,
        ],
        "completed_time": 2018-01-06T09:40:05.000Z,
        "jobUnique": "uniqv",
        "last_event": 2018-01-06T09:52:05.000Z,
        "materialID": 68845,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      "47261" => Object {
        "completedInspections": Object {
          "Insp1": 2018-01-31T09:58:10.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqy",
        "last_event": 2018-01-31T09:58:10.000Z,
        "materialID": 47261,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
          "Insp1",
        ],
      },
      "11231" => Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:10.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqk",
        "last_event": 2018-02-02T10:04:10.000Z,
        "materialID": 11231,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "palbb",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 2,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 3,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:42:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "palbb",
      "program": "prog6",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T09:57:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "True",
      "startofcycle": false,
      "type": "InspectionForce",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "details": Object {
        "ActualPath": "[{\\"MaterialID\\":11231,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
        "InspectionType": "Insp1",
      },
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T09:57:10.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "",
      "program": "theprogramshouldbeignored",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 8,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:57:10.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 8,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:10.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facek",
          "id": 11231,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "serial": "serialr",
          "uniq": "uniqk",
          "workorder": "works",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "sim_use": Object {
    "production": Array [],
    "station_use": Array [],
  },
}
`;
